Improved formatting on users and media

--- a/frontend/mission-ops/src/app/media-view/media-view.component.html
+++ b/frontend/mission-ops/src/app/media-view/media-view.component.html
@@ -1,4 +1,7 @@
-<!-- <ng-container *ngIf="media">
-  <app-panorama-viewer [inputData]="media"></app-panorama-viewer>
-</ng-container> -->
-<app-panorama-viewer [inputData]="media"></app-panorama-viewer>
+<div class="container text-center">
+  <h2>{{media.name}}</h2>
+  <div class="row justify-content-md-center">
+    <app-panorama-viewer [inputData]="media"></app-panorama-viewer>
+  </div>
+  <a class="btn btn-outline-secondary" href="/media" role="button">Media Gallery</a>
+</div>
