--- a/frontend/mission-ops/src/app/login/login.component.html
+++ b/frontend/mission-ops/src/app/login/login.component.html
@@ -1,22 +1,24 @@
-<h2>Login</h2>
-<form>
-  <div class="form-group">
-    <label for="usernameInput">Username</label>
-    <input [(ngModel)]="username" type="text" class="form-control" id="usernameInput" placeholder="Username" name="username">
-  </div>
-  <div class="form-group">
-    <label for="passwordInput">Password</label>
-    <input [(ngModel)]="password" type="password" class="form-control" id="passwordInput" placeholder="Password" name="password">
-  </div>
-  <app-alert [alertStyle]="'danger'" #loginAlert></app-alert>
-  <button (click)="signIn()" class="btn btn-outline-primary">
-    Sign In
-    <span *ngIf="processing" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
-  </button>
-  <button (click)="forgotPassword()" class="btn btn-outline-link">
-    Forgot Password?
-  </button>
-</form>
+<div class="container">
+  <h2>Login</h2>
+  <form>
+    <div class="form-group">
+      <label for="usernameInput">Username</label>
+      <input [(ngModel)]="username" type="text" class="form-control" id="usernameInput" placeholder="Username" name="username">
+    </div>
+    <div class="form-group">
+      <label for="passwordInput">Password</label>
+      <input [(ngModel)]="password" type="password" class="form-control" id="passwordInput" placeholder="Password" name="password">
+    </div>
+    <app-alert [alertStyle]="'danger'" #loginAlert></app-alert>
+    <button (click)="signIn()" class="btn btn-outline-primary">
+      Sign In
+      <span *ngIf="processing" class="spinner-border spinner-border-sm" role="status" aria-hidden="true"></span>
+    </button>
+    <button (click)="forgotPassword()" class="btn btn-link">
+      Forgot Password?
+    </button>
+  </form>
+</div>
 
 <app-modal [dataSource]="pwd" #newPwdModal>
   <ng-container modal-title>
