Added telemetry type / units to y-axis of telemetry charts
- :bread:
- Getting the telemetry type collection once when loading the systems, then passing through to telemetry-data. Building a string based on the component telemetry's telemetry type id.

--- a/frontend/mission-ops/src/app/component-list/component-list.component.html
+++ b/frontend/mission-ops/src/app/component-list/component-list.component.html
@@ -37,7 +37,7 @@
       <br/>
       <div class = "row">
         <div *ngIf = "selectedComponent">
-            <app-component-telemetry [component] = "selectedComponent" [dateRangeObj] = "dateRangeObj"></app-component-telemetry>
+            <app-component-telemetry [telemetryTypes] = "telemetryTypes" [component] = "selectedComponent" [dateRangeObj] = "dateRangeObj"></app-component-telemetry>
         </div>
       </div>
   </div>
