--- a/frontend/mission-ops/src/app/telemetry-data/telemetry-data.component.html
+++ b/frontend/mission-ops/src/app/telemetry-data/telemetry-data.component.html
@@ -8,7 +8,8 @@
         [maxValue] = "componentTelemetry.upperBound"
         [minValue] = "componentTelemetry.lowerBound"
         [startDate] = "startDate"
-        [endDate] = "endDate"></app-chart>
+        [endDate] = "endDate"
+        [yAxis] = "telemetryTypeUnit"></app-chart>
   </div>
 </div>
 
