Changed Media to Payload Data in route and in header
- Minor typo fix in manage system inputs as well

--- a/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
+++ b/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
@@ -43,7 +43,7 @@
   </div>
   <div class = "col-md-6">
     <div class = "container">
-      <h4>Component Telemetries</h4>
+      <h4>Component Telemetry</h4>
       <div *ngIf = "selectedComponent; else noComponent">
           <ul class="list-group">
               <li *ngFor="let compTelem of compTelemetries"
