--- a/frontend/mission-ops/src/app/media-view/media-view.component.html
+++ b/frontend/mission-ops/src/app/media-view/media-view.component.html
@@ -3,5 +3,5 @@
   <div class="row justify-content-md-center">
     <app-panorama-viewer [inputData]="media"></app-panorama-viewer>
   </div>
-  <a class="btn btn-outline-secondary" href="/media" role="button">Media Gallery</a>
+  <a class="btn btn-outline-secondary" href="/payloadData" role="button">Media Gallery</a>
 </div>
