--- a/frontend/mission-ops/src/app/media-library/media-library.component.html
+++ b/frontend/mission-ops/src/app/media-library/media-library.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2>Media Library</h2>
+  <h2>Payload Data</h2>
   <ng-container *ngIf="mediaList; else loadingSpinner">
     <div class="row">
       <div *ngFor="let m of mediaList.items; index as i" class="col-xs-12 col-sm-6 col-md-4 col-lg-3">
