Added form validation for new, edited telemetry types
- Checks if strings are empty/whitespace

--- a/frontend/mission-ops/src/app/create-telemetry-type/create-telemetry-type.component.html
+++ b/frontend/mission-ops/src/app/create-telemetry-type/create-telemetry-type.component.html
@@ -22,6 +22,10 @@
               placeholder="Unit"/>
           </div>
       </div>
+      <div *ngFor="let error of newTelemetryTypeErrorMsgs">
+          <label style="color:red;">{{error}}</label>
+          <br />
+      </div>
     </div>
   <div class="modal-footer">
     <button [ngClass] = "isEditing ? 'btn btn-info' : 'btn btn-success'"
