--- a/frontend/mission-ops/src/app/create-component/create-component.component.html
+++ b/frontend/mission-ops/src/app/create-component/create-component.component.html
@@ -2,6 +2,7 @@
     <h4 class="modal-title">{{modalTitle}}</h4>
     <button type="button" class="close" aria-label="Close"
      (click)="activeModal.dismiss('Cross click')">
+     <span aria-hidden="true">&times;</span>
     </button>
   </div>
   <form [formGroup] = "createCompForm" (ngSubmit) = "submitNewComp()">
