--- a/frontend/mission-ops/src/app/create-pass/create-pass.component.html
+++ b/frontend/mission-ops/src/app/create-pass/create-pass.component.html
@@ -2,6 +2,7 @@
   <h4 class="modal-title">Create New Pass</h4>
   <button type="button" class="close" aria-label="Close"
     (click)="activeModal.dismiss('Cross click')">
+    <span aria-hidden="true">&times;</span>
   </button>
 </div>
 <form [formGroup] = "createPassForm" (ngSubmit) = "submitPass()">
