--- a/frontend/mission-ops/src/app/create-telemetry-type/create-telemetry-type.component.html
+++ b/frontend/mission-ops/src/app/create-telemetry-type/create-telemetry-type.component.html
@@ -1,8 +1,9 @@
 <div class="modal-header">
     <h4 class="modal-title">{{modalTitle}}</h4>
     <button type="button" class="close" aria-label="Close"
-     (click)="activeModal.dismiss('Cross click')">
-    </button>
+    (click)="activeModal.dismiss('Cross click')">
+    <span aria-hidden="true">&times;</span>
+   </button>
   </div>
   <form [formGroup] = "createTelemetryTypeForm" (ngSubmit) = "submitNewTelemetryType()">
     <div class = "modal-body">
