Added telemetry unit to telemetry type listings

--- a/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
+++ b/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
@@ -95,7 +95,7 @@
           (click)="onSelectTelemetryType(tt)"
           [class.active]="tt===selectedTelemetryType"
           class="list-group-item">
-            {{tt.name}}
+            {{tt.name}} <span class = "badge badge-secondary">{{tt.telemetryUnit}}</span>
           </li>
         </ul>
       </ng-container>
