Added form validation for component telemetry add/edit
- Checks if name is valid, if there is an associated telemetry type ID, and that the lower bound does not exceed the upper bound
- also minor fix on button disable - cant add a component/component telemetry if its parent is not selected yet

--- a/frontend/mission-ops/src/app/create-component-telemetry/create-component-telemetry.component.html
+++ b/frontend/mission-ops/src/app/create-component-telemetry/create-component-telemetry.component.html
@@ -57,6 +57,10 @@
           </div>
         </div>
       </div>
+      <div *ngFor="let error of newCompTelemErrorMsgs">
+        <label style="color:red;">{{error}}</label>
+        <br />
+      </div>
     </div>
   <div class="modal-footer">
     <button [ngClass] = "isEditing ? 'btn btn-info' : 'btn btn-success'"
