Added form validation for component add/edit
- Just checks that the name is not empty/whitespace

--- a/frontend/mission-ops/src/app/create-component/create-component.component.html
+++ b/frontend/mission-ops/src/app/create-component/create-component.component.html
@@ -23,6 +23,10 @@
             formControlName = "name"/>
         </div>
       </div>
+      <div *ngFor="let error of newCompErrorMsgs">
+        <label style="color:red;">{{error}}</label>
+        <br />
+    </div>
     </div>
   <div class="modal-footer">
     <button [ngClass] = "isEditing ? 'btn btn-info' : 'btn btn-success'"
