Added form validation to add queued telecommand (batch)
- Checks if telecommand (batch) selected
- Checks if datetime selected is in the future
- Checks that the command parameters are a valid JSON (if not batch)

--- a/frontend/mission-ops/src/app/create-queued-telecommand/create-queued-telecommand.component.html
+++ b/frontend/mission-ops/src/app/create-queued-telecommand/create-queued-telecommand.component.html
@@ -68,6 +68,10 @@
         <app-datetime-picker dateFormControlName = "executionDate" timeFormControlName = "executionTime" [formGroup] = "createQtcForm"></app-datetime-picker>
       </div>
     </div>
+    <div *ngFor="let error of newQtcErrorMsgs">
+      <label style="color:red;">{{error}}</label>
+      <br />
+    </div>
   </div>
   <div class="modal-footer">
     <button class = "btn btn-success"
