search not working bcuz problems

--- a/frontend/mission-ops/src/app/anomaly-subscription/anomaly-subscription.component.html
+++ b/frontend/mission-ops/src/app/anomaly-subscription/anomaly-subscription.component.html
@@ -34,5 +34,5 @@
 </div>
 
 <div *ngIf="selectedSub">
-  <button class="btn btn-outline-primary" (click)="removeSub()">Remove {{selectedSub.systemName}}</button>
+  <button class="btn btn-outline-primary" (click)="removeSub()">Unsubscribe from {{selectedSub.systemName}}</button>
 </div>
