--- a/frontend/mission-ops/src/app/create-pass/create-pass.component.html
+++ b/frontend/mission-ops/src/app/create-pass/create-pass.component.html
@@ -12,6 +12,14 @@
           <label for = "passDate">Pass Datetime</label>
           <app-datetime-picker dateFormControlName = "passDate" timeFormControlName = "passTime" [formGroup] = "createPassForm"></app-datetime-picker>
         </div>
+        <div class = "form-group">
+          <label for = "availablePower">Available Power:</label>
+          <input type = "text" class = "form-control" formControlName="availablePower" [formGroup] = "createPassForm">
+        </div>
+        <div class = "form-group">
+          <label for = "availableBandwidth">Available Bandwidth:</label>
+          <input type = "text" class = "form-control" formControlName="availableBandwidth" [formGroup] = "createPassForm">
+        </div>
       </div>
       <div *ngFor="let error of newPassErrorMsgs">
         <label style="color:red;">{{error}}</label>
