small queues bug fix and route fix
- added new fields to our pass post route
- changed the default max power and badnwidth
- added messages in telecommands and bacthes if there are none

--- a/frontend/mission-ops/src/app/telecommand-batches/telecommand-batches.component.html
+++ b/frontend/mission-ops/src/app/telecommand-batches/telecommand-batches.component.html
@@ -14,6 +14,10 @@
         {{batch.name}}
       </li>
     </ul>
+    <div *ngIf = "telecommandBatches && telecommandBatches.length == 0;">
+      <br/>
+      <p class = "font-weight-bolder">No telecommand batches have been created.</p>
+    </div>
   </div>
   <div class="col">
     <div *ngIf="selectedBatch">
