--- a/frontend/mission-ops/src/app/telecommands/telecommands.component.html
+++ b/frontend/mission-ops/src/app/telecommands/telecommands.component.html
@@ -15,6 +15,10 @@
           {{telecommand.name}}
         </li>
       </ul>
+      <div *ngIf = "telecommands && telecommands.length == 0;">
+        <br/>
+        <p class = "font-weight-bolder">No telecommands have been created</p>
+      </div>
     </div>
     <div class="col">
       <app-telecommand-details [telecommand] = "selectedTelecommand" [existingTelecommand] = "viewingExistingTelecommand"></app-telecommand-details>      
