Added name to users and on header Also fixed extra lines appearing in header dropdown menu

--- a/frontend/mission-ops/src/app/users/users.component.html
+++ b/frontend/mission-ops/src/app/users/users.component.html
@@ -3,16 +3,18 @@
   <table class="table">
     <thead>
       <tr>
+        <th scope="col">Name</th>
         <th scope="col">Email</th>
         <th scope="col">Phone</th>
         <th scope="col">Status</th>
-        <th scope="col">Administrator</th>
+        <th scope="col">Admin</th>
         <th scope="col">Actions</th>
       </tr>
     </thead>
     <tbody>
       <ng-container *ngIf="userList; else tableSpinner">
         <tr *ngFor="let user of userList.items">
+          <td>{{user.name}}</td>
           <td>{{user.email}}</td>
           <td>{{user.phone}}</td>
           <td>{{user.status}}</td>
