--- a/frontend/mission-ops/src/app/create-user/create-user.component.html
+++ b/frontend/mission-ops/src/app/create-user/create-user.component.html
@@ -1,6 +1,10 @@
 <h2>Create User</h2>
 <form>
   <div class="form-group">
+    <label for="nameInput">Name</label>
+    <input [(ngModel)]="name" type="text" class="form-control" id="nameInput" placeholder="Name" name="name">
+  </div>
+  <div class="form-group">
     <label for="emailInput">Email</label>
     <input [(ngModel)]="email" type="email" class="form-control" id="emailInput" placeholder="Email" name="email">
   </div>
