--- a/frontend/mission-ops/src/app/header/header.component.html
+++ b/frontend/mission-ops/src/app/header/header.component.html
@@ -18,14 +18,16 @@
         <a class="nav-link" routerLink="/login">Login</a>
       </li>
       <ng-template #alreadyAuthenticated>
-        <li class="nav-item dropdown" ngbDropdown>
-          <a class="nav-link dropdown-toggle" ngbDropdownToggle role="button" aria-haspopup="true" aria-expanded="false">{{auth.getCurrentUser()?.email}}</a>
+        <li class="nav-item dropdown" ngbDropdown placement="bottom">
+          <a class="nav-link dropdown-toggle" ngbDropdownToggle role="button" aria-haspopup="true" aria-expanded="false">{{auth.getCurrentUser()?.getName()}}</a>
           <div ngbDropdownMenu class="dropdown-menu">
             <a class="dropdown-item" href="/users/edit?id={{auth.getCurrentUser()?.id}}">Edit Profile</a>
-            <div class="dropdown-divider"></div>
-            <a *ngIf="auth.isAdministrator()" class="dropdown-item" href="/users">Manage Users</a>
-            <div class="dropdown-divider"></div>
-            <a *ngIf="auth.isAdministrator()" class="dropdown-item" href="/system-inputs">Manage System Inputs</a>
+            <ng-container *ngIf="auth.isAdministrator()">
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="/users">Manage Users</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="/system-inputs">Manage System Inputs</a>
+            </ng-container>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="/anomaly-subscription?id={{auth.getCurrentUser()?.id}}">Manage Anomaly Subscriptions</a>
             <div class="dropdown-divider"></div>
