--- a/frontend/mission-ops/src/app/login/login.component.html
+++ b/frontend/mission-ops/src/app/login/login.component.html
@@ -6,8 +6,8 @@
     <div class = "row justify-content-center">
       <form>
           <div class="form-group">
-            <label for="usernameInput">Username</label>
-            <input [(ngModel)]="username" type="text" class="form-control" id="usernameInput" placeholder="Username" name="username">
+            <label for="emailInput">Email</label>
+            <input [(ngModel)]="email" type="Email" class="form-control" id="emailInput" placeholder="Email" name="email">
           </div>
           <div class="form-group">
             <label for="passwordInput">Password</label>
