--- a/frontend/mission-ops/src/app/modify-user/modify-user.component.html
+++ b/frontend/mission-ops/src/app/modify-user/modify-user.component.html
@@ -2,6 +2,10 @@
   <h2>Modify User</h2>
   <form *ngIf="user; else loadingSpinner">
     <div class="form-group">
+      <label for="nameInput">Name</label>
+      <input [(ngModel)]="user.name" type="text" class="form-control" id="nameInput" placeholder="Name" name="name">
+    </div>
+    <div class="form-group">
       <label for="emailInput">Email</label>
       <input [ngModel]="user.email" type="email" class="form-control" id="emailInput" placeholder="Email" name="email" readonly>
     </div>
