--- a/frontend/mission-ops/src/app/transmission-queue/transmission-queue.component.html
+++ b/frontend/mission-ops/src/app/transmission-queue/transmission-queue.component.html
@@ -1,12 +1,12 @@
 <div class="col">
   <div *ngIf="selectedPass">
     <br/>
-    <div class = "row d-flex justify-content-center">
+    <div *ngIf="!selectedPass.passHasOccurred" class = "row d-flex justify-content-center">
       <button class = "btn btn-success" (click) = "submitTransmissionQueueToGroundStation()">
         Save to Ground Station
       </button>
+      <br/>
     </div>
-    <br/>
     <ul class = "list-group">
       <ng-container *ngIf = "passQueuedTelecommands && passQueuedTelecommands.length > 0; else noTelecommands">
         <div *ngFor="let queuedTelecommand of passQueuedTelecommands, let i = index">
