made queued telecommands show user's name if available

--- a/frontend/mission-ops/src/app/queued-telecommand/queued-telecommand.component.html
+++ b/frontend/mission-ops/src/app/queued-telecommand/queued-telecommand.component.html
@@ -47,7 +47,7 @@
       </ng-container>
       <div *ngIf="user" class = "form-group">
         <label>Responsible User</label>
-        <input [ngModel] = "user.email"  class="form-control" name= "queuedTelecommandUser" readonly>
+        <input [ngModel] = "user.getName()"  class="form-control" name= "queuedTelecommandUser" readonly>
       </div>
     </form>
   </div>
