--- a/frontend/mission-ops/src/app/media-view/media-view.component.html
+++ b/frontend/mission-ops/src/app/media-view/media-view.component.html
@@ -1,5 +1,5 @@
 <div class="container text-center">
-  <h2>{{media.name}}</h2>
+  <h2>{{media?.name}}</h2>
   <div class="row justify-content-md-center">
     <app-panorama-viewer [inputData]="media"></app-panorama-viewer>
   </div>
