--- a/frontend/mission-ops/src/app/transmission-queue/transmission-queue.component.html
+++ b/frontend/mission-ops/src/app/transmission-queue/transmission-queue.component.html
@@ -1,12 +1,14 @@
 <div class="col">
   <div *ngIf="selectedPass">
-    <br/>
-    <div *ngIf="!selectedPass.passHasOccurred" class = "row d-flex justify-content-center">
+    <ng-container *ngIf="!selectedPass.passHasOccurred"> 
+      <br/>
+      <div class = "row d-flex justify-content-center">
       <button class = "btn btn-success" (click) = "submitTransmissionQueueToGroundStation()">
         Save to Ground Station
       </button>
-      <br/>
     </div>
+    <br/>
+    </ng-container>
     <ul class = "list-group">
       <ng-container *ngIf = "passQueuedTelecommands && passQueuedTelecommands.length > 0; else noTelecommands">
         <div *ngFor="let queuedTelecommand of passQueuedTelecommands, let i = index">
