Spelling is hard.
- :squirrel:
- :+1:

--- a/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
+++ b/frontend/mission-ops/src/app/cubesat-sys-inputs/cubesat-sys-inputs.component.html
@@ -131,7 +131,7 @@
   </ng-container>
   <ng-container modal-body>
     <p>Are you sure you want to delete component <span class="text-primary">{{selectedComponent?.name}}</span>?</p>
-    <p>It will be deleted <span class="text-danger">permanently</span> along with <span class = "text-danger">all associated component telemetries</span> and can never be recovered.</p>
+    <p>It will be deleted <span class="text-danger">permanently</span> along with <span class = "text-danger">all associated component telemetry</span> and can never be recovered.</p>
   </ng-container>
   <ng-container modal-footer>
     <button (click)="deleteComponent()" class="btn btn-outline-danger">
